<resources>
    <string name="app_name">Gym Tracker App 2</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="new_workout">New workout</string>
    <string name="workout_history">Workout history</string>

    <string name="exercise_name">Exercise Name</string>
    <string name="add_set">Add set</string>
    <string name="remove_set">Remove set</string>

    <string name="date">Date</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_saved">The workout has been saved successfully.</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="remove_exercise">Remove Exercise</string>
    <string name="save">Save</string>
    <string name="tab_description">Select which exercise you would like to edit</string>
    <string name="exercise_display_description">Details about each exercise are displayed here</string>

    <string name="warmup">Warm-up</string>
    <string name="set_count">Count</string>
    <string name="set_weight">Weight</string>
    <string name="set_count_hint">Enter the number of repetitions done in this set</string>
    <string name="set_weight_hint">Enter the weight used during this set</string>

    <string name="title_activity_workout">workoutActivity</string>
    <string name="stats">Stats</string>

    <string-array name="stats_period">
        <item>last month</item>
        <item>last 3 months</item>
        <item>last 6 months</item>
        <item>last year</item>
        <item>all time</item>
    </string-array>
    <string name="no_data">No data for the selected time period</string>

    <string name="open">Open</string>
    <string name="preferredUnit">Preferred units</string>
    <string name="settings">Settings</string>

    <string name="weight">Weight</string>
    <string name="time">Time</string>
    <string name="rep">Repetition</string>
    <string name="same_name_exercise">You cannot set the exercise name to this, because there is already an exercise with this name.</string>
</resources>